--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@ text-align :center;
 h2{
 text-align :center;
 }
-
+img{
+align : left ;
+}
 </style>
 </head>
 <body>
 <h1 >Mahatma Gandhi</h1>
 <h2>A peaceful leader</h2>
-<img src="https://assets.ltkcontent.com/images/182816/Mahatma-Gandhi-Quotes_a8c93349dc.jpg"> 
+<img src="https://assets.ltkcontent.com/images/182816/Mahatma-Gandhi-Quotes_a8c93349dc.jpg" height="400" width="500" align="right"> 
 <h2>A brief summary of Gandhi's journey</h2>
 <h3>Early life</h3>
 <p>
 Mahatma Gandhi was born on October 2, 1869, in Porbandar, India, which was then part of the British Empire.
 Although young Gandhi wanted to become a doctor, his father, who served as a chief minister in Porbandar, persuaded him to study law.
-After 3 years of studies in London (where he became a vegetarian), Gandhi came back to India and tried to start his career as a lawyer.
+After 3 years of studies in London , Gandhi came back to India and tried to start his career as a lawyer.
 </p>
 <h3>South Africa</h3>
 <p>
@@ -53,10 +55,10 @@ Gandhi's death was mourned nationwide, and over a million people joined the five
 </p>
 <h3>Legacy</h3>
 <p>
-Gandhi's commitment to nonviolence and his belief in simple living — making his clothes, eating a vegetarian diet — has been a beacon of hope for oppressed people around the world for decades to come after his death.
+Gandhi's commitment to nonviolence and his belief in simple living making his clothes, eating a vegetarian diet  has been a beacon of hope for oppressed people around the world for decades to come after his death.
 Gandhi's actions inspired future human rights movements around the globe, including those of civil rights leader Martin Luther King Jr. in the United States and Nelson Mandela in South Africa. 
 </p>
-<p>"In a gentle way, you can shake the world."</p>
+<p><b><i>"In a gentle way, you can shake the world."</i></b></p>
 <p> <i> - Mahatma Gandhi </i></p>
 </body>
 </html>
